error page + profile page disalignment fixes

--- a/app/src/css/PageNF.css
+++ b/app/src/css/PageNF.css
@@ -5,6 +5,22 @@
     src: url(https://fonts.gstatic.com/s/dancingscript/v24/If2RXTr6YS-zF4S-kcSWSVi_szLviuEViw.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
+.PageNF {
+    margin-top: 13%;
+}
+
+.PageNF a {
+    color: white;
+    text-decoration: none;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+}
+
+.PageNF a:hover {
+    text-decoration: transparent;
+    font-size: 17px;
+}
+
 
 .PageNF body, .PageNF html {
     height: 100%;
@@ -86,11 +102,11 @@
     cursor: pointer;
     box-shadow: inset 0 0 0.75rem rgba(255, 255, 255, 0.1);
 &.home-page {
-     transform: rotate(-90deg) translate(-12.4rem, 3rem);
+     transform: rotate(-90deg) translate(-11.35rem, 3rem);
      transform-origin: 0;
  }
 &.about-us {
-     transform: rotate(-100deg) translate(-13.4rem, 6.1rem);
+     transform: rotate(-100deg) translate(-12.4rem, 6.1rem);
      transform-origin: 0;
      outline: 1px solid transparent;
  }
@@ -109,7 +125,7 @@
      height: 3.5rem;
      border: 1px dashed rgba(255, 255, 255, 0.3);
      background-color: transparent;
-     transform: rotate(-90deg) translate(-12rem, 13rem) scale(1);
+     transform: rotate(-90deg) translate(-11rem, 13rem) scale(1);
      transform-origin: 0;
      cursor: default;
      animation: bookFadeOut 1s 3s infinite forwards;
@@ -122,11 +138,11 @@
      background-repeat: no-repeat;
      background-size: 4rem;
      background-position: left center;
-     font-family: "Dancing Script";
+     font-family: "JetBrains Mono";
      text-transform: lowercase;
-     font-size: 25px;
+     font-size: 15px;
      content: "this page can't be found";
-     transform: rotate(90deg) translate(6rem, -1rem);
+     transform: rotate(90deg) translate(3rem, -3rem);
      opacity: 0.3;
  }
 }
