--- a/app/src/css/apps.css
+++ b/app/src/css/apps.css
@@ -44,30 +44,30 @@
     margin-left: 500px;
 }
 
-.row {
+.content.row {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.row h2 {
+.content h2 {
     font-size: 1.5rem;
     font-weight: bold;
     color: white;
 }
 
-.app-cards {
+.content.app-cards {
     display: flex;
     gap: 1rem;
     overflow-x: auto;
     white-space: nowrap;
 }
 
-.app-cards::-webkit-scrollbar {
+.content.app-cards::-webkit-scrollbar {
     display: none;
 }
 
-.app-card {
+.content.app-card {
     min-width: 200px;
     max-width: 250px;
 }
